--- a/start/server/package.json
+++ b/start/server/package.json
@@ -15,11 +15,12 @@
     "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "2.6.1",
     "apollo-server-testing": "2.6.1",
+    "dotenv": "^8.1.0",
     "graphql": "^14.2.1",
     "isemail": "^3.1.3",
     "nodemon": "^1.18.4",
     "sequelize": "^4.39.0",
-    "sqlite3": "^4.0.3"
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "apollo-link": "^1.2.3",
